mv test -> spec

--- a/spec/index.html
+++ b/spec/index.html
@@ -11,7 +11,7 @@
 <script src="util/mocha.js"></script>
 <script src="util/chai.js"></script>
 <script>mocha.setup('bdd')</script>
-<script src="reddit_test.js"></script>
+<script src="reddit_spec.js"></script>
 <script>
   mocha.checkLeaks();
   mocha.run();
