--- a/examples/puredom/index.html
+++ b/examples/puredom/index.html
@@ -29,7 +29,7 @@
         left.className = "col-xs-4";
         thumbnail.setAttribute("src", awwData.thumbnail);
 
-        link.setAttribute("href", "http://www.reddit.com" + awwData.permalink);
+        link.setAttribute("href", "https://www.reddit.com" + awwData.permalink);
         link.innerText = awwData.title;
         left.appendChild(thumbnail);
         left.appendChild(link);
